# jogo_da_forca

./: Cargo.toml  anotacoes.txt
src/: main.rs
src/cliente_https/: cliente.rs  mod.rs  requisicao.rs  resposta.rs
src/models/: deserializacao.rs  mod.rs  palavra_aleatoria.rs  significados.rs
