[package]
name = "jogo_da_forca"
version = "0.1.0"
authors = ["ciro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures   = "0.3"
tokio     = { version = "1", features = ["full"] }
hyper     = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5.0" }
